adjusted langin page, and color of footer, inputer all media and paragraphs into contentful. Now to connect it

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -8,8 +8,14 @@
   align-items: center;
 }
 
-.footer p {
+.footer a {
   color: #fff;
+}
+
+.footer a:hover {
+  color: #fff;
+  text-shadow: 0 0 0 #fff, 0 0 10px #fff, 0 0 20px #fff;
+  /* border-bottom: 0px; */
 }
 
 .logo {
