--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -1,13 +1,20 @@
 .landing-container img {
-  height: 100vh;
-  width: 100%;
+  height: 75vh;
+  /* width: 50%; */
   /* background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(https://res.cloudinary.com/dvug8hy5k/image/upload/v1620001235/Portfolio1/sebastian-ervi-Qq2h76kYRFI-unsplash_gkf9pp.jpg); */
   /* background-size: cover; */
-  /* background-position: center; */
-  /* background-position: fixed; */
+  background-position: center;
+  background-position: fixed;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 10px;
+}
+
+p {
+  position: relative;
+  padding: 20px;
+  font-size: 50px;
 }
